--- a/trainer/team.html
+++ b/trainer/team.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width"/>
     <title>Top Team</title>
     <script src="//www.parsecdn.com/js/parse-1.3.0.min.js"></script>
-    <link rel="stylesheet" href="css/foundation.min.css"/>
-    <link rel="stylesheet" href="css/normalize.css"/>
-    <link rel="stylesheet" href="css/topbar.css"/>
-    <link rel="stylesheet" href="css/app.css"/>
-    <script src="foundation-js/modernizr.js"></script>
+    <link rel="stylesheet" href="../css/foundation.min.css"/>
+    <link rel="stylesheet" href="../css/normalize.css"/>
+    <link rel="stylesheet" href="../css/topbar.css"/>
+    <link rel="stylesheet" href="../css/app.css"/>
+    <script src="../foundation-js/modernizr.js"></script>
 </head>
 <body>
 
@@ -30,7 +30,7 @@
                 <ul class="off-canvas-list">
                     <li class="show-for-small"><label>Foundation</label></li>
                     <li><a href="training.html">Training</a></li>
-                    <li><a href="index.html" id="button-logout">Logout</a></li>
+                    <li><a href="../index.html" id="button-logout">Logout</a></li>
                 </ul>
             </aside>
         </div>
@@ -80,7 +80,7 @@
 
     <div class="row">
         <div class="row">
-            <img id="image-player" class="img-player large-4 columns" src="img/avatar.jpg">
+            <img id="image-player" class="img-player large-4 columns" src="../img/avatar.jpg">
             <input id="input-player-name-big" class="input-player-name large-3 columns large-offset-2" required="true"
                    placeholder="Vorname Nachname"/>
         </div>
@@ -109,7 +109,7 @@
     <div class="row">
         <div class="small-12 medium-12 columns">
             <div class="row">
-                <img id="image-player-small" class="img-player" src="img/avatar.jpg" class="small-12 columns">
+                <img id="image-player-small" class="img-player" src="../img/avatar.jpg" class="small-12 columns">
             </div>
             <div class="row">
                 <input id="input-player-name-small" class="input-player-name small-12 medium-12 columns" required="true"
@@ -139,11 +139,11 @@
         <a class="close-reveal-modal">&#215;</a>
     </div>
 </div>
-<script src="js/jquery-2.1.1.min.js"></script>
-<script src="foundation-js/foundation.min.js"></script>
+<script src="../js/jquery-2.1.1.min.js"></script>
+<script src="../foundation-js/foundation.min.js"></script>
 <script>
     $(document).foundation();
 </script>
-<script src="js/Team.js"></script>
+<script src="js/team.js"></script>
 </body>
 </html>
