--- a/trainer/training.html
+++ b/trainer/training.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width"/>
     <title>Top Team</title>
     <script src="//www.parsecdn.com/js/parse-1.3.0.min.js"></script>
-    <link rel="stylesheet" href="css/foundation.min.css"/>
-    <link rel="stylesheet" href="css/normalize.css"/>
-    <link rel="stylesheet" href="jquery-ui/jquery.contextMenu.css"/>
-    <link rel="stylesheet" href="css/topbar.css"/>
+    <link rel="stylesheet" href="../css/foundation.min.css"/>
+    <link rel="stylesheet" href="../css/normalize.css"/>
+    <link rel="stylesheet" href="../jquery-ui/jquery.contextMenu.css"/>
+    <link rel="stylesheet" href="../css/topbar.css"/>
     <!--[if lt IE 8]>
-    <link rel="stylesheet" href="css/fonts/foundation_icons_general/stylesheets/general_foundicons_ie7.css">
+    <link rel="stylesheet" href="../css/fonts/foundation_icons_general/stylesheets/general_foundicons_ie7.css">
     <![endif]-->
-    <link rel="stylesheet" href="css/fonts/foundation_icons_general/stylesheets/general_foundicons.css">
-    <link rel="stylesheet" href="css/app.css"/>
-    <script src="foundation-js/modernizr.js"></script>
-    <script src="js/jquery-2.1.1.min.js"></script>
+    <link rel="stylesheet" href="../css/fonts/foundation_icons_general/stylesheets/general_foundicons.css">
+    <link rel="stylesheet" href="../css/app.css"/>
+    <script src="../foundation-js/modernizr.js"></script>
+    <script src="../js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-    <script type="text/javascript" src="js/chart.js"></script>
+    <script type="text/javascript" src="../js/chart.js"></script>
 </head>
 <body>
 <div class="off-canvas-wrap" data-offcanvas>
@@ -40,7 +40,7 @@
                     </li>
                     <li><a href="team.html">Spielerkader</a>
                     </li>
-                    <li><a href="index.html" id="button-logout">Logout</a>
+                    <li><a href="../index.html" id="button-logout">Logout</a>
                     </li>
                 </ul>
             </aside>
@@ -150,8 +150,8 @@
     <h3 id="playername"></h3>
 
     <div class="row">
-            <img class="img-player large-3 columns" src="img/avatar.jpg">
-            <table id="player-tr-detail-table" class="large-9 large-offset-3 columns">
+        <img class="img-player large-3 columns" src="../img/avatar.jpg">
+        <table id="player-tr-detail-table" class="large-9 large-offset-3 columns">
                 <thead>
                 <tr>
                     <th>Trainings Daten:</th>
@@ -169,8 +169,8 @@
 </div>
 
 
-<script src="foundation-js/foundation.min.js"></script>
-<script type="text/javascript" src="jquery-ui/jquery.ui.position.js"></script>
+<script src="../foundation-js/foundation.min.js"></script>
+<script type="text/javascript" src="../jquery-ui/jquery.ui.position.js"></script>
 <script>
     $(document).foundation();
 </script>
