--- a/manager/manager.html
+++ b/manager/manager.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width"/>
     <title>Top Team</title>
     <script src="//www.parsecdn.com/js/parse-1.3.0.min.js"></script>
-    <link rel="stylesheet" href="css/foundation.min.css"/>
-    <link rel="stylesheet" href="css/normalize.css"/>
-    <link rel="stylesheet" href="css/topbar.css"/>
-    <link rel="stylesheet" href="css/app.css"/>
-    <script src="foundation-js/modernizr.js"></script>
+    <link rel="stylesheet" href="../css/foundation.min.css"/>
+    <link rel="stylesheet" href="../css/normalize.css"/>
+    <link rel="stylesheet" href="../css/topbar.css"/>
+    <link rel="stylesheet" href="../css/app.css"/>
+    <script src="../foundation-js/modernizr.js"></script>
 </head>
 <body>
 <div class="fixed">
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
             <li class="name">
-                <h1><a href="index.html">Top Team</a></h1>
+                <h1><a href="../index.html">Top Team</a></h1>
             </li>
             <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
             <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
@@ -25,7 +25,7 @@
         <section class="top-bar-section">
             <!-- Right Nav Section -->
             <ul class="right">
-                <li><a href="index.html" id="button-logout" class="button">Logout</a></li>
+                <li><a href="../index.html" id="button-logout" class="button">Logout</a></li>
             </ul>
             <!--Left Nav Section-->
             <ul class="left">
@@ -44,8 +44,8 @@
 
 </div>
 
-<script src="js/jquery-2.1.1.min.js"></script>
-<script src="foundation-js/foundation.min.js"></script>
+<script src="../js/jquery-2.1.1.min.js"></script>
+<script src="../foundation-js/foundation.min.js"></script>
 <script>
     $(document).foundation();
 </script>
