--- a/trainer/trainer.html
+++ b/trainer/trainer.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width"/>
     <title>Top Team</title>
     <script src="//www.parsecdn.com/js/parse-1.3.0.min.js"></script>
-    <link rel="stylesheet" href="css/foundation.min.css"/>
-    <link rel="stylesheet" href="css/normalize.css"/>
-    <link rel="stylesheet" href="css/topbar.css"/>
-    <link rel="stylesheet" href="css/app.css"/>
-    <script src="foundation-js/modernizr.js"></script>
+    <link rel="stylesheet" href="../css/foundation.min.css"/>
+    <link rel="stylesheet" href="../css/normalize.css"/>
+    <link rel="stylesheet" href="../css/topbar.css"/>
+    <link rel="stylesheet" href="../css/app.css"/>
+    <script src="../foundation-js/modernizr.js"></script>
 </head>
 <body>
 <div class="off-canvas-wrap" data-offcanvas>
@@ -30,7 +30,7 @@
                     <li class="show-for-small"><label>Foundation</label></li>
                     <li><a href="training.html">Training</a></li>
                     <li><a href="team.html">Spielerkader</a></li>
-                    <li><a href="index.html" id="button-logout">Logout</a></li>
+                    <li><a href="../index.html" id="button-logout">Logout</a></li>
                 </ul>
             </aside>
         </div>
@@ -48,11 +48,11 @@
     </div>
 </div>
 
-<script src="js/jquery-2.1.1.min.js"></script>
-<script src="foundation-js/foundation.min.js"></script>
+<script src="../js/jquery-2.1.1.min.js"></script>
+<script src="../foundation-js/foundation.min.js"></script>
 <script>
     $(document).foundation();
 </script>
-<script src="js/Team.js"></script>
+<script src="js/team.js"></script>
 </body>
 </html>
