--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav class="tab-bar">
                 <div class="title-area">
                     <div class="name">
-                        <h1><a href="#">Top Team</a></h1>
+                        <h1><a href="">Top Team</a></h1>
                     </div>
                 </div>
                 <section class="right-small show-for-small">
@@ -34,7 +34,6 @@
                 </ul>
             </aside>
         </div>
-
         <div class="row">
             <div class="large-12 columns content-wrapper">
                 <div class="row" id="button-create-new-team">
@@ -92,6 +91,7 @@
             </div>
         </div>
     </div>
+    <a class="close-reveal-modal">&#215;</a>
 </div>
 
 
