spieler detail modal basst

--- a/trainer/training.html
+++ b/trainer/training.html
@@ -150,18 +150,19 @@
     <h3 id="playername"></h3>
 
     <div class="row">
-        <img class="img-player large-3 columns" src="../img/avatar.jpg">
-        <table id="player-tr-detail-table" class="large-9 large-offset-3 columns">
-                <thead>
-                <tr>
-                    <th>Trainings Daten:</th>
+        <img class="img-player" src="../img/avatar.jpg">
+        <table id="player-tr-detail-table">
+            <thead>
+            <tr>
+                <th>Trainings Daten:</th>
 
-                </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
-        </div>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
+    <a class="close-reveal-modal" id="close-player-addition-modal">&#215;</a>
 </div>
 
 
