scheiß zeug ausgebessert

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/app.css"/>
     <script src="foundation-js/modernizr.js"></script>
 </head>
-<body>
+<body id="index-body">
 
 <div class="off-canvas-wrap" data-offcanvas>
     <div class="inner-wrap">
