--- a/manager/manager.html
+++ b/manager/manager.html
@@ -12,29 +12,63 @@
     <script src="../foundation-js/modernizr.js"></script>
 </head>
 <body>
-<div class="fixed">
-    <nav class="top-bar" data-topbar role="navigation">
-        <ul class="title-area">
-            <li class="name">
-                <h1><a href="../index.html">Top Team</a></h1>
-            </li>
-            <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-            <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-        </ul>
+<div class="off-canvas-wrap" data-offcanvas>
+    <div class="inner-wrap">
+        <div class="hybrid-bar">
+            <nav class="tab-bar">
+                <div class="title-area">
+                    <div class="name">
+                        <h1><a href="#">Top Team</a></h1>
+                    </div>
+                </div>
+                <section class="right-small show-for-small">
+                    <a class="right-off-canvas-toggle menu-icon" href="#"><span></span></a>
+                </section>
+            </nav>
+            <aside class="right-off-canvas-menu">
+                <ul class="off-canvas-list">
+                    <li class="show-for-small">
+                        <label>Foundation</label>
+                    </li>
+                    <li><a href="team.html">Spielerkader</a>
+                    </li>
+                    <li><a href="../index.html" id="button-logout">Logout</a>
+                    </li>
+                </ul>
+            </aside>
+        </div>
+        <div class="row">
+            <div class="large-12 columns content-wrapper">
+                <div class="row">
+                    <a class="button large-12 columns medium-12 small-12" href="#" data-reveal-id="modal-add-training">Training
+                        hinzufügen</a>
 
-        <section class="top-bar-section">
-            <!-- Right Nav Section -->
-            <ul class="right">
-                <li><a href="../index.html" id="button-logout" class="button">Logout</a></li>
-            </ul>
-            <!--Left Nav Section-->
-            <ul class="left">
-                <li><a class="button" href="">Beiner</a></li>
-                <li><a class="button" href="">Strafenkatalog</a></li>
-                <li><a class="button" href="">Infos einstellen</a></li>
-            </ul>
-        </section>
-    </nav>
+                </div>
+
+                <!-- player-container -------------------------------------------------------------------------------------------------------->
+                <div class="row">
+                    <div class="large-12 columns" id="player-container">
+                        <table id="training-table">
+                            <thead>
+                            <tr>
+                                <th id="training-date">Datum</th>
+                                <th id="training-time">Uhrzeit</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="large-12 columns" id="chart_div"></div>
+                </div>
+
+            </div>
+        </div>
+        <a class="exit-off-canvas"></a>
+    </div>
 </div>
 <!--End of navbar-------------------------------------------------------------------------------------------------------->
 
