--- a/manager/nutmeg.html
+++ b/manager/nutmeg.html
@@ -7,17 +7,9 @@
     <script src="//www.parsecdn.com/js/parse-1.3.0.min.js"></script>
     <link rel="stylesheet" href="../css/foundation.min.css"/>
     <link rel="stylesheet" href="../css/normalize.css"/>
-    <link rel="stylesheet" href="../jquery-ui/jquery.contextMenu.css"/>
     <link rel="stylesheet" href="../css/topbar.css"/>
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="../css/fonts/foundation_icons_general/stylesheets/general_foundicons_ie7.css">
-    <![endif]-->
-    <link rel="stylesheet" href="../css/fonts/foundation_icons_general/stylesheets/general_foundicons.css">
     <link rel="stylesheet" href="../css/app.css"/>
     <script src="../foundation-js/modernizr.js"></script>
-    <script src="../js/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-    <script type="text/javascript" src="../js/chart.js"></script>
 </head>
 <body>
 <div class="off-canvas-wrap" data-offcanvas>
@@ -37,8 +29,6 @@
                 <ul class="off-canvas-list">
                     <li class="show-for-small">
                         <label>Foundation</label>
-                    </li>
-                    <li><a href="team.html">Spielerkader</a>
                     </li>
                     <li><a href="../index.html" id="button-logout">Logout</a>
                     </li>
@@ -61,7 +51,6 @@
                             <tr>
                                 <th id="training-date">Datum</th>
                                 <th id="training-time">Uhrzeit</th>
-                                <th id="training-player-number">Anzahl der Spieler</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -74,53 +63,22 @@
                     <div class="large-12 columns" id="chart_div"></div>
                 </div>
 
-
-                <!-- player-in-training-container -------------------------------------------------------------------------------------------------------->
-                <div class="row">
-                    <div class="large-12 columns" id="training-container">
-                        <table id="player-training-table">
-                            <thead>
-                            <tr>
-                                <th id="pic-player">Bild</th>
-                                <th id="name-player">Name</th>
-                                <th id="training-sum">Gesamt TR</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
             </div>
         </div>
         <a class="exit-off-canvas"></a>
     </div>
 </div>
-
 <!--End of navbar-------------------------------------------------------------------------------------------------------->
 
-
-<!--Training  anlegen modal------------------------------------------------------------------------------------------------>
-<div id="modal-add-training" class="reveal-modal" data-reveal>
-    <h2>Neues Training anlegen</h2>
-    <input type="date" id="input-date-training">
-    <input type="time" id="input-time-training">
-    <button id="button-add-training">Training anlegen</button>
-    <a class="close-reveal-modal">&#215;</a>
-</div>
-
-
-<!--Spieler zu Tr hinzufügen modal------------------------------------------------------------------------------------------------>
-<div id="modal-add-player-to-tr" class="reveal-modal" data-reveal>
+<div id="modal-add-nutmeg-to-player" class="reveal-modal" data-reveal>
     <h2>Fügen Sie Spieler durch markieren zum Training hinzu!</h2>
 
 
     <div class="row">
-        <div class="large-12 columns" id="modal-add-player-to-tr-controll-panel">
+        <div class="large-12 columns" id="modal-add-nutmeg-to-player-controll-panel">
 
             <div id="header-date"></div>
             <div id="player-count"></div>
-            <a id="delete-tr" class="round tiny button"><i class="foundicon-trash"></i> Training löschen</a>
         </div>
     </div>
     <!-- player-container -------------------------------------------------------------------------------------------------------->
@@ -142,35 +100,17 @@
     <a class="close-reveal-modal" id="close-player-addition-modal">&#215;</a>
 </div>
 
+<div style="background: pink; height: 300px">Verwalter dummy container<br>
+    Verwalter können Beiner eingeben, abrechnen, Mannschaftskasse verwalten, Strafenkatalog anlegen und verwalten...,
+    und infos auf spielerstartseite einstellen
 
-<!------modal-tr-detail-player-------------------------------------------------------------------------------------------->
-<div id="modal-tr-detail-player" class="reveal-modal" data-reveal>
-    <h2>Spieler Trainings Details</h2>
-
-    <h3 id="playername"></h3>
-
-    <div class="row">
-        <img class="img-player" src="../img/avatar.jpg">
-        <table id="player-tr-detail-table">
-            <thead>
-            <tr>
-                <th>Trainings Daten:</th>
-
-            </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
-    </div>
-    <a class="close-reveal-modal" id="close-player-addition-modal">&#215;</a>
 </div>
 
-
+<script src="../js/jquery-2.1.1.min.js"></script>
 <script src="../foundation-js/foundation.min.js"></script>
-<script type="text/javascript" src="../jquery-ui/jquery.ui.position.js"></script>
 <script>
     $(document).foundation();
 </script>
-<script src="js/training.js"></script>
+<script src="js/nutmeg.js"></script>
 </body>
 </html>
