PLAYERINFO BOX mit Datum und formatiert

--- a/trainer/trainer.html
+++ b/trainer/trainer.html
@@ -39,7 +39,9 @@
 
 
                 <div id="player-infobox" class="panel">
-
+                    <b>Aktuelle Info an Ihre Spieler: </b>
+                    <label id="player-infobox-label"></label>
+                    <label id="player-infobox-createdat"></label>
                 </div>
 
                 <div class="row">
