--- a/player/player.html
+++ b/player/player.html
@@ -45,7 +45,9 @@
             <div class="large-12 columns content-wrapper">
 
                 <div id="player-infobox" class="panel">
-
+                    <b>Aktuelle Info vom Trainer: </b>
+                    <label id="player-infobox-label"></label>
+                    <label id="player-infobox-createdat"></label>
                 </div>
 
 
