PLAYERINFO BOX bug bei noch keinen eingegebenen infos beseitig

--- a/player/player.html
+++ b/player/player.html
@@ -103,27 +103,19 @@
     <h3 id="playername"></h3>
 
     <div class="row">
-        <div class="three columns push-nine">
-            <img id="image-player" class="img-player large-3 columns" src="../img/avatar.jpg">
-        </div>
+        <img class="img-player" src="../img/avatar.jpg">
+        <table id="player-tr-detail-table">
+            <thead>
+            <tr>
+                <th>Trainings Daten:</th>
+
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
     </div>
-    <div class="row">
-        <div class="nine columns pull-three">
-            <table id="player-tr-detail-table">
-                <thead>
-                <tr>
-                    <th>Trainings Daten:</th>
-
-                </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
-        </div>
-    </div>
-
-
-    <a class="close-reveal-modal">&#215;</a>
+    <a class="close-reveal-modal" id="close-modal-tr-detail-player">&#215;</a>
 </div>
 
 
