--- a/manager/nutmeg.html
+++ b/manager/nutmeg.html
@@ -28,7 +28,7 @@
             <aside class="right-off-canvas-menu">
                 <ul class="off-canvas-list">
                     <li class="show-for-small">
-                        <label>Foundation</label>
+                        <label>Top Team</label>
                     </li>
                     <li><a href="../index.html" id="button-logout">Logout</a>
                     </li>
@@ -36,12 +36,7 @@
             </aside>
         </div>
         <div class="row">
-            <div class="large-12 columns content-wrapper">
-                <div class="row">
-                    <a class="button large-12 columns medium-12 small-12" href="#" data-reveal-id="modal-add-training">Training
-                        hinzufügen</a>
 
-                </div>
 
                 <!-- player-container -------------------------------------------------------------------------------------------------------->
                 <div class="row">
@@ -59,11 +54,8 @@
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="large-12 columns" id="chart_div"></div>
-                </div>
 
-            </div>
+        </div>
         </div>
         <a class="exit-off-canvas"></a>
     </div>
@@ -89,8 +81,9 @@
                 <tr>
                     <th id="player-icon">Spieler Avatar</th>
                     <th id="player-name">Spieler Name</th>
-                    <th>4</th>
-                    <th>5</th>
+                    <th>Beiner</th>
+                    <th></th>
+                    <th></th>
                 </tr>
                 </thead>
                 <tbody>
