--- a/player/nutmeg.html
+++ b/player/nutmeg.html
@@ -13,6 +13,7 @@
     <script src="../foundation-js/modernizr.js"></script>
     <script src="../js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script type="text/javascript" src="js/nutmegchart.js"></script>
 
 </head>
 <body>
@@ -60,6 +61,11 @@
                             </tbody>
                         </table>
                     </div>
+                </div>
+
+
+                <div class="row">
+                    <div class="large-12 columns" id="chart_div"></div>
                 </div>
 
 
