Abfrage auf UserRole geht

--- a/manager/nutmeg.html
+++ b/manager/nutmeg.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="../css/foundation.min.css"/>
     <link rel="stylesheet" href="../css/normalize.css"/>
     <link rel="stylesheet" href="../css/topbar.css"/>
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="../css/fonts/foundation_icons_general/stylesheets/general_foundicons_ie7.css">
+    <![endif]-->
+    <link rel="stylesheet" href="../css/fonts/foundation_icons_general/stylesheets/general_foundicons.css">
     <link rel="stylesheet" href="../css/app.css"/>
     <script src="../foundation-js/modernizr.js"></script>
 </head>
@@ -36,8 +40,7 @@
             </aside>
         </div>
         <div class="row">
-
-
+            <div class="large-12 columns content-wrapper">
                 <!-- player-container -------------------------------------------------------------------------------------------------------->
                 <div class="row">
                     <div class="large-12 columns" id="player-container">
@@ -53,9 +56,7 @@
                         </table>
                     </div>
                 </div>
-
-
-        </div>
+            </div>
         </div>
         <a class="exit-off-canvas"></a>
     </div>
@@ -63,8 +64,7 @@
 <!--End of navbar-------------------------------------------------------------------------------------------------------->
 
 <div id="modal-add-nutmeg-to-player" class="reveal-modal" data-reveal>
-    <h2>Fügen Sie Spieler durch markieren zum Training hinzu!</h2>
-
+    <h2>Fügen Sie Beinschüße für Spieler hinzu!</h2>
 
     <div class="row">
         <div class="large-12 columns" id="modal-add-nutmeg-to-player-controll-panel">
@@ -74,23 +74,23 @@
         </div>
     </div>
     <!-- player-container -------------------------------------------------------------------------------------------------------->
-    <div class="row">
-        <div class="large-12 columns" id="player-modal-container">
-            <table id="player-modal-table">
-                <thead>
-                <tr>
-                    <th id="player-icon">Spieler Avatar</th>
-                    <th id="player-name">Spieler Name</th>
-                    <th>Beiner</th>
-                    <th></th>
-                    <th></th>
-                </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
-        </div>
+
+    <div id="player-modal-container">
+        <table id="player-modal-table">
+            <thead>
+            <tr>
+                <th id="player-icon" class="player-icon-column">Spieler Avatar</th>
+                <th id="player-name" class="player-name-column">Spieler Name</th>
+                <th class="nutmeg-column"></th>
+                <th class="minus-column">Beiner</th>
+                <th class="plus-column"></th>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
     </div>
+
     <!--<button id="button-add-player-to-tr">Training anlegen</button>-->
     <a class="close-reveal-modal" id="close-player-addition-modal">&#215;</a>
 </div>
