--- a/player/nutmeg.html
+++ b/player/nutmeg.html
@@ -77,6 +77,7 @@
                             <tr>
                                 <th id="name-player">Name</th>
                                 <th id="nutmeg-sum">Gesamt Beiner</th>
+                                <th id="nutmeg-not-paid-sum">Beiner (nicht bezahlt)</th>
                             </tr>
                             </thead>
                             <tbody>
