rolle richtig angelegt die zweite

--- a/manager/manager.html
+++ b/manager/manager.html
@@ -83,6 +83,6 @@
 <script>
     $(document).foundation();
 </script>
-<script src="js/Manager.js"></script>
+<script src="js/manager.js"></script>
 </body>
 </html>
