BEINER BEINER BEINER

--- a/manager/nutmeg.html
+++ b/manager/nutmeg.html
@@ -61,10 +61,12 @@
         <a class="exit-off-canvas"></a>
     </div>
 </div>
+
+
 <!--End of navbar-------------------------------------------------------------------------------------------------------->
 
 <div id="modal-add-nutmeg-to-player" class="reveal-modal" data-reveal>
-    <h2>Fügen Sie Beinschüße für Spieler hinzu!</h2>
+    <h2>Fügen Sie Beinschüsse für Spieler hinzu!</h2>
 
     <div class="row">
         <div class="large-12 columns" id="modal-add-nutmeg-to-player-controll-panel">
