--- a/manager/nutmeg.html
+++ b/manager/nutmeg.html
@@ -34,6 +34,7 @@
                     <li class="show-for-small">
                         <label>Top Team</label>
                     </li>
+                    <li><a href="manager.html">Verwalter Start</a>
                     <li><a href="../index.html" id="button-logout">Logout</a>
                     </li>
                 </ul>
